--- a/WeClean/Views/Services/Disinfection.cshtml
+++ b/WeClean/Views/Services/Disinfection.cshtml
@@ -4,5 +4,137 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Disinfection</h1>
+<!--Page Title-->
+<section class="page-title" style="background-image:url(images/background/3.jpg)">
+    <div class="auto-container">
+        <h2>Home and Office Disinfection</h2>
+    </div>
+</section>
+<!--End Page Title-->
+<!--Sidebar Page Container-->
+<section class="sidebar-page-container">
+    <div class="auto-container">
+        <div class="row clearfix">
 
+            <!--Content Side-->
+            <div class="content-side col-lg-8 col-md-12 col-sm-12">
+                <div class="services-single">
+                    <div class="inner-box">
+                        <h3>Home and Office Disinfection</h3>
+                        <div class="text">
+                            <p>Cleanmate delivers a fast response, discrete and legally compliant range of disinfection services to help protect your business against infectious bacteria, viruses and disease.</p>
+
+                            <div class="row clearfix">
+
+                                <!--Services Single Block-->
+                                <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
+                                    <div class="inner-box">
+                                        <div class="image">
+                                            <img src="/images/resource/services-7.jpg" alt="" />
+                                            <div class="overlay-box">
+                                                <div class="overlay-inner">
+                                                    <div class="content">
+                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="case-studies">Case Studies</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--Services Single Block-->
+                                <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
+                                    <div class="inner-box">
+                                        <div class="image">
+                                            <img src="/images/resource/services-8.jpg" alt="" />
+                                            <div class="overlay-box">
+                                                <div class="overlay-inner">
+                                                    <div class="content">
+                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="case-studies">Case Studies</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="bold-text">Our specialist disinfection solutions provide businesses with an essential resource in light of the COVID-19 pandemic. We offer a range of services, tailored to your needs, to support your business deal with the effects of the coronavirus.</div>
+                        </div>
+                        <ul class="list-style-two">
+                            <li>
+                                <strong>Precautionary disinfection service</strong> <br />
+                                This service is available as a stand-alone or regular disinfection of premises to lower the risk of cross-contamination.
+                            </li>
+                            <li>
+                                <strong>High level specialist disinfection</strong> <br />
+                                This service is for those customers who have closed their premises within the last 72 hours and who need a highly specialised service because they’ve had suspected or confirmed cases of infection.
+                            </li>
+                            <li>
+                                <strong>Intermediate specialist disinfection </strong><br />
+                                For when you have closed your premises for more than 72 hours due to suspected or confirmed cases of infection.
+                                This service reflects government guidance that, under most circumstances, the amount of infectious viruses on any contaminated surface is likely to have significantly decreased after 72 hours.
+                            </li>
+                            <li>
+                                <strong>Contingency survey</strong> <br />
+                                This is designed for when you want to be able to react quickly in the event of a case of infection by planning how a specialist disinfection service would be carried out.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!--Sidebar Side-->
+            <div class="sidebar-side col-lg-4 col-md-12 col-sm-12">
+                <aside class="sidebar">
+
+
+
+
+
+                    <!-- Booking Widget -->
+                    <div class="sidebar-widget booking-widget">
+                        <div class="widget-content" style="background-image:url(images/resource/image-3.jpg)">
+                            <div class="sidebar-title">
+                                <h2>Book a Cleaner</h2>
+                                <div class="separator"></div>
+                            </div>
+
+                            <!--Booking Form-->
+                            <div class="booking-form">
+                                <form method="post" action="">
+                                    <div class="form-group">
+                                        <input type="text" name="firstname" value="" placeholder="Name" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="email" name="email" value="" placeholder="Email" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="text" name="address" value="" placeholder="Address" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <textarea name="message" placeholder="Message..."></textarea>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <button type="submit" class="theme-btn book-btn">Book Now</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <!--End Booking Form-->
+
+                        </div>
+                    </div>
+
+                </aside>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!--End Faq Page Section-->
