--- a/WeClean/Views/Services/HouseKeeping.cshtml
+++ b/WeClean/Views/Services/HouseKeeping.cshtml
@@ -4,5 +4,125 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>HouseKeeping</h1>
+<!--Page Title-->
+<section class="page-title" style="background-image:url(images/background/3.jpg)">
+    <div class="auto-container">
+        <h2>Home and Office Cleaning</h2>
+    </div>
+</section>
+<!--End Page Title-->
+<!--Sidebar Page Container-->
+<section class="sidebar-page-container">
+    <div class="auto-container">
+        <div class="row clearfix">
 
+            <!--Content Side-->
+            <div class="content-side col-lg-8 col-md-12 col-sm-12">
+                <div class="services-single">
+                    <div class="inner-box">
+                        <h3>Home and Office Cleaning</h3>
+                        <div class="text">
+                            <p>Clean mate is known for best home and office cleaning company in South Africa. Starting from deep cleaning to sanitizing, disinfection, sofa, chair, carpet, vertical blind, inside and outside glass, window, toilet, water tank, reservoir, septic tank and pest control services are served with professional cleaners and modern equipment.</p>
+
+                            <div class="row clearfix">
+
+                                <!--Services Single Block-->
+                                <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
+                                    <div class="inner-box">
+                                        <div class="image">
+                                            <img src="/images/resource/services-7.jpg" alt="" />
+                                            <div class="overlay-box">
+                                                <div class="overlay-inner">
+                                                    <div class="content">
+                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="case-studies">Case Studies</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--Services Single Block-->
+                                <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
+                                    <div class="inner-box">
+                                        <div class="image">
+                                            <img src="/images/resource/services-8.jpg" alt="" />
+                                            <div class="overlay-box">
+                                                <div class="overlay-inner">
+                                                    <div class="content">
+                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="case-studies">Case Studies</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="bold-text">Some of our house and office cleaning service include:</div>
+                        </div>
+                        <ul class="list-style-two">
+                            <li>Floor cleaning</li>
+                            <li>Sofa cleaning.</li>
+                            <li>Vertical blind cleaning</li>
+                            <li>On Demand Office and House cleaning </li>
+                            <li>Bathroom cleaning</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!--Sidebar Side-->
+            <div class="sidebar-side col-lg-4 col-md-12 col-sm-12">
+                <aside class="sidebar">
+
+
+
+
+
+                    <!-- Booking Widget -->
+                    <div class="sidebar-widget booking-widget">
+                        <div class="widget-content" style="background-image:url(images/resource/image-3.jpg)">
+                            <div class="sidebar-title">
+                                <h2>Book a Cleaner</h2>
+                                <div class="separator"></div>
+                            </div>
+
+                            <!--Booking Form-->
+                            <div class="booking-form">
+                                <form method="post" action="">
+                                    <div class="form-group">
+                                        <input type="text" name="firstname" value="" placeholder="Name" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="email" name="email" value="" placeholder="Email" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="text" name="address" value="" placeholder="Address" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <textarea name="message" placeholder="Message..."></textarea>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <button type="submit" class="theme-btn book-btn">Book Now</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <!--End Booking Form-->
+
+                        </div>
+                    </div>
+
+                </aside>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!--End Faq Page Section-->
