--- a/WeClean/Views/Home/About.cshtml
+++ b/WeClean/Views/Home/About.cshtml
@@ -55,12 +55,12 @@
                             <div class="icon-box">
                                 <span class="icon flaticon-broom"></span>
                             </div>
-                            <h2>We have spent more than 60 <br> years getting to know every kind <br> of client.</h2>
+                            <h2>We answer to the needs of our <br>clients with satistfaction guaranteed.</h2>
                             <div class="separator"></div>
                         </div>
                         <div class="text">
-                            <p>The Cleaning Authority is widely recognized for our commitment to serving our customers while staying friendly to the environment. We have a history of excellence.</p>
-                            <p>We dedication to our clients through providing professional and high-quality cleaning services across france.</p>
+                            <p>We are recognized for our commitment to serving our customers while staying friendly to the environment. We have a history of excellence.</p>
+                            <p>We have dedication to our clients through providing professional and high-quality cleaning services.</p>
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                 <div class="services-block-three col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <h3><a href="#">Our Vision</a></h3>
-                        <div class="text">Across the world our vision is same, To be the dominant residential cleaning franchise in our markets.</div>
+                        <div class="text">To be the dominant residential cleaning franchise in our markets.</div>
                     </div>
                 </div>
 
