--- a/WeClean/Views/Services/CarpetCleaning.cshtml
+++ b/WeClean/Views/Services/CarpetCleaning.cshtml
@@ -3,6 +3,123 @@
     ViewData["Title"] = "CarpetCleaning";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<!--Page Title-->
+<section class="page-title" style="background-image:url(images/background/3.jpg)">
+    <div class="auto-container">
+        <h2>Carpet Cleaning</h2>
+    </div>
+</section>
+<!--End Page Title-->
+<!--Sidebar Page Container-->
+<section class="sidebar-page-container">
+    <div class="auto-container">
+        <div class="row clearfix">
 
-<h1>CarpetCleaning</h1>
+            <!--Content Side-->
+            <div class="content-side col-lg-8 col-md-12 col-sm-12">
+                <div class="services-single">
+                    <div class="inner-box">
+                        <h3>Carpet Cleaning</h3>
+                        <div class="text">
+                            <p>You have a stain you just can’t get rid of, well you in luck we have just the right expertise. Our team of experts with a great combination of eco-friendly products to match produce best results.</p>
+                           
+                            <div class="row clearfix">
 
+                                <!--Services Single Block-->
+                                <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
+                                    <div class="inner-box">
+                                        <div class="image">
+                                            <img src="/images/resource/services-7.jpg" alt="" />
+                                            <div class="overlay-box">
+                                                <div class="overlay-inner">
+                                                    <div class="content">
+                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="case-studies">Case Studies</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--Services Single Block-->
+                                <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
+                                    <div class="inner-box">
+                                        <div class="image">
+                                            <img src="/images/resource/services-8.jpg" alt="" />
+                                            <div class="overlay-box">
+                                                <div class="overlay-inner">
+                                                    <div class="content">
+                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="case-studies">Case Studies</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="bold-text">Some of our carpets cleaning services in home and offices include:</div>
+                        </div>
+                        <ul class="list-style-two">
+                            <li>Everyday cleaning</li>
+                            <li>Pet spots and odour removal.</li>
+                            <li>Upholstery cleaning</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!--Sidebar Side-->
+            <div class="sidebar-side col-lg-4 col-md-12 col-sm-12">
+                <aside class="sidebar">
+
+                    
+
+                   
+
+                    <!-- Booking Widget -->
+                    <div class="sidebar-widget booking-widget">
+                        <div class="widget-content" style="background-image:url(images/resource/image-3.jpg)">
+                            <div class="sidebar-title">
+                                <h2>Book a Cleaner</h2>
+                                <div class="separator"></div>
+                            </div>
+
+                            <!--Booking Form-->
+                            <div class="booking-form">
+                                <form method="post" action="">
+                                    <div class="form-group">
+                                        <input type="text" name="firstname" value="" placeholder="Name" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="email" name="email" value="" placeholder="Email" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="text" name="address" value="" placeholder="Address" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <textarea name="message" placeholder="Message..."></textarea>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <button type="submit" class="theme-btn book-btn">Book Now</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <!--End Booking Form-->
+
+                        </div>
+                    </div>
+
+                </aside>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!--End Faq Page Section-->
