--- a/WeClean/Views/Services/TileCleaning.cshtml
+++ b/WeClean/Views/Services/TileCleaning.cshtml
@@ -4,5 +4,132 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>TileCleaning</h1>
 
+<!--Page Title-->
+<section class="page-title" style="background-image:url(images/background/3.jpg)">
+    <div class="auto-container">
+        <h2>Tile and Grout Cleaning</h2>
+    </div>
+</section>
+<!--End Page Title-->
+<!--Sidebar Page Container-->
+<section class="sidebar-page-container">
+    <div class="auto-container">
+        <div class="row clearfix">
+
+            <!--Content Side-->
+            <div class="content-side col-lg-8 col-md-12 col-sm-12">
+                <div class="services-single">
+                    <div class="inner-box">
+                        <h3>Tile and Grout Cleaning</h3>
+                        <div class="text">
+                            <p>
+                                Cleaning tile floors by hand is hard work. It’s messy, uncomfortable and impossible to get the deep-clean results that come with professional tile and grout cleaning.
+                                This is because regular mopping will never reach the hidden dirt that lies deep within the pores of your grout lines. Grout is a porous material and it collects dirt, grime and spills, often discoloring the surface.
+                            </p>
+
+                            <div class="row clearfix">
+
+                                <!--Services Single Block-->
+                                <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
+                                    <div class="inner-box">
+                                        <div class="image">
+                                            <img src="/images/resource/services-7.jpg" alt="" />
+                                            <div class="overlay-box">
+                                                <div class="overlay-inner">
+                                                    <div class="content">
+                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="case-studies">Case Studies</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--Services Single Block-->
+                                <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
+                                    <div class="inner-box">
+                                        <div class="image">
+                                            <img src="/images/resource/services-8.jpg" alt="" />
+                                            <div class="overlay-box">
+                                                <div class="overlay-inner">
+                                                    <div class="content">
+                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="case-studies">Case Studies</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="bold-text">Our professional tile and grout cleaning service uses our proprietary hot water extraction cleaning method to clean out the hidden dirt and restore the luster to your floors. In addition, we’ll remove 96.5% allergens from your grout.</div>
+                        </div>
+                        <ul class="list-style-two">
+                            <li>
+                                <strong>Our Tile And Grout Cleaning Equipment:</strong>  <br />
+                                When we clean tile and grout we use a high-pressure water and vacuum system along with a cleaning solution that doesn’t leave a residue.
+                            </li>
+                            <li>
+                                <strong>Cleaner And Healthier</strong>  <br />
+                                Our tile and grout cleaning process removes an average of 96% of common household allergens making use of eco-friendly products.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!--Sidebar Side-->
+            <div class="sidebar-side col-lg-4 col-md-12 col-sm-12">
+                <aside class="sidebar">
+
+
+
+
+
+                    <!-- Booking Widget -->
+                    <div class="sidebar-widget booking-widget">
+                        <div class="widget-content" style="background-image:url(images/resource/image-3.jpg)">
+                            <div class="sidebar-title">
+                                <h2>Book a Cleaner</h2>
+                                <div class="separator"></div>
+                            </div>
+
+                            <!--Booking Form-->
+                            <div class="booking-form">
+                                <form method="post" action="">
+                                    <div class="form-group">
+                                        <input type="text" name="firstname" value="" placeholder="Name" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="email" name="email" value="" placeholder="Email" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="text" name="address" value="" placeholder="Address" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <textarea name="message" placeholder="Message..."></textarea>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <button type="submit" class="theme-btn book-btn">Book Now</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <!--End Booking Form-->
+
+                        </div>
+                    </div>
+
+                </aside>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!--End Faq Page Section-->
