--- a/WeClean/Views/Services/WindowCleaning.cshtml
+++ b/WeClean/Views/Services/WindowCleaning.cshtml
@@ -4,5 +4,137 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>WindowCleaning</h1>
 
+<!--Page Title-->
+<section class="page-title" style="background-image:url(images/background/3.jpg)">
+    <div class="auto-container">
+        <h2>Window Cleaning</h2>
+    </div>
+</section>
+<!--End Page Title-->
+<!--Sidebar Page Container-->
+<section class="sidebar-page-container">
+    <div class="auto-container">
+        <div class="row clearfix">
+
+            <!--Content Side-->
+            <div class="content-side col-lg-8 col-md-12 col-sm-12">
+                <div class="services-single">
+                    <div class="inner-box">
+                        <h3>Window Cleaning</h3>
+                        <div class="text">
+                            <p>
+                                Cleanmate's professional window cleaning team assembles experts who are all passionate about the work they carry out. We use the latest window cleaning tools to get the job done at an impressively high standard. Armed with our trusty squeegees and expertise to wield them better than anyone else, we’ll produce jaw-dropping results that are sure to impress.
+                            </p>
+
+                            <div class="row clearfix">
+
+                                <!--Services Single Block-->
+                                <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
+                                    <div class="inner-box">
+                                        <div class="image">
+                                            <img src="/images/resource/services-7.jpg" alt="" />
+                                            <div class="overlay-box">
+                                                <div class="overlay-inner">
+                                                    <div class="content">
+                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="case-studies">Case Studies</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--Services Single Block-->
+                                <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
+                                    <div class="inner-box">
+                                        <div class="image">
+                                            <img src="/images/resource/services-8.jpg" alt="" />
+                                            <div class="overlay-box">
+                                                <div class="overlay-inner">
+                                                    <div class="content">
+                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="case-studies">Case Studies</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="bold-text">Not only are your windows and frames left spotlessly clean, but cleaning the frame could also help your windows last longer by removing any corrosives.</div>
+                        </div>
+                        <p>
+                            Cleanmate has a great reputation for maintaining one of your biggest investments whether it’s your home or business. We specialise in any form of cleaning from a large hotel or business to schools, homes and local shops.
+                        </p>
+                        <p>
+                            We can reach inaccessible windows and frames anything from Ground to Fourth floor from the safety of the ground. We have full liability cover for peace of mind for our customers.
+                        </p>
+                        @*<ul class="list-style-two">
+                            <li>
+                                <strong>Our Tile And Grout Cleaning Equipment:</strong>  <br />
+                                When we clean tile and grout we use a high-pressure water and vacuum system along with a cleaning solution that doesn’t leave a residue.
+                            </li>
+                            <li>
+                                <strong>Cleaner And Healthier</strong>  <br />
+                                Our tile and grout cleaning process removes an average of 96% of common household allergens making use of eco-friendly products.
+                            </li>
+                        </ul>*@
+                    </div>
+                </div>
+            </div>
+
+            <!--Sidebar Side-->
+            <div class="sidebar-side col-lg-4 col-md-12 col-sm-12">
+                <aside class="sidebar">
+
+
+
+
+
+                    <!-- Booking Widget -->
+                    <div class="sidebar-widget booking-widget">
+                        <div class="widget-content" style="background-image:url(images/resource/image-3.jpg)">
+                            <div class="sidebar-title">
+                                <h2>Book a Cleaner</h2>
+                                <div class="separator"></div>
+                            </div>
+
+                            <!--Booking Form-->
+                            <div class="booking-form">
+                                <form method="post" action="">
+                                    <div class="form-group">
+                                        <input type="text" name="firstname" value="" placeholder="Name" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="email" name="email" value="" placeholder="Email" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="text" name="address" value="" placeholder="Address" required>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <textarea name="message" placeholder="Message..."></textarea>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <button type="submit" class="theme-btn book-btn">Book Now</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <!--End Booking Form-->
+
+                        </div>
+                    </div>
+
+                </aside>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!--End Faq Page Section-->
